Revision history for Gimp-Perl extension.

	- added examples/avi (avi load/save plug-in, uncompressed 24 bit).
	- possible fix for another installation horror problem.
        - fixed a longstanding bug (?): not every class had a DESTROY, so
          the AUTOLOAD tried to resolve DESTROY after gimp_close had been
          called.
        - started to revamp the extra argument handling.
        - updated PDB Explorer a bit, still broken.
        - almost full i18n of gimp-perl. A de translation is available.
        - save_image was kinda broken for jpeg and gif at least.
        - implemented more robust DESTROY and Lib:: connection handling.
        - put help window into a scrolledwindow, as to a suggestion by Jens
          Lauterbach. Karlsruhe rules!

1.13  Wed Sep  8 02:55:43 CEST 1999
	- removed some glib-1.1 compatibility cruft.
        - gimpdocs troff output did not include the description.
        - allow NULL strings in arrays to be returned as undef.
        - gimpdoc now outputs the menupath and other info as well.
        
1.12  Tue Aug 24 19:30:29 CEST 1999
	- do not emit warning for function names prefixed with "+".
        - removed non-c89 ansi'isms from Lib.xs.

1.11  Tue Aug  3 03:23:23 CEST 1999
	- EXPERIMENTALLY re-enabled the return path from main. It works
          with perl 5.005_60, but I remember problems with other versions.
          This re-enables END handlers etc.
	- updated seths scripts, added remove_guides...
        - examples/glowing_steel was missing from the MANIFEST!!
        - data types for RADIO, SPINNER etc.. are guessed better now.
        - added examples/guides_to_selection.
        - added examples/burst, without even looking at it ;)
        - warn about deprecated :auto behaviour, remove in next version.
        - call displays_flush in more cases now.
        - always leave a dummy dimension of 1 into the pdl, for gray and
          indexed drawables. down the other road lies madness.