@@ -50,7 +50,7 @@ sub tests {
    skip($n,1,sub{0 != ($l=$i->layer_new(10,10,RGBA_IMAGE,"new layer",100,VALUE_MODE))});
    skip($n,1,sub {!!ref $l});
    
-   skip($n,1,sub{gimp_image_add_layer($l,0) || 1});
+   skip($n,1,sub{Gimp->image_add_layer($l,0) || 1});
    skip($n,"new layer",sub{$l->get_name()});
    
    skip($n,1,sub{$l->paintbrush(50,[1,1,2,2,5,3,7,4,2,8],CONTINUOUS,0) || 1});
@@ -58,7 +58,7 @@ sub tests {
    
    skip($n,1,sub{Plugin->sharpen(RUN_NONINTERACTIVE,$i,$l,10) || 1});
    skip($n,1,sub{$l->sharpen(10) || 1});
-   skip($n,1,sub{plug_in_sharpen($i,$l,10) || 1});
+   skip($n,1,sub{Gimp->plug_in_sharpen($i,$l,10) || 1});
    
    skip($n,1,sub{$i->delete || 1});
 }
